FRW-606 Fixed deprecation warnings for faker in tests. (#7341)
FRW-606 Fixed deprecations for faker in tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -973,8 +973,8 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.functional.mariadb.yml
-              - travis_wait 100 docker/sdk up -t -v
-              - travis_wait 100 docker/sdk testing codecept run -c codeception.ci.functional.yml
+              - travis_wait 30 docker/sdk up -t -v
+              - travis_wait 35 docker/sdk testing codecept run -c codeception.ci.functional.yml
 
         - name: Docker / Alpine / PHP 8.0 / PostgreSQL / Functional Tests
           <<: *DOCKER_BUILD_TEMPLATE
@@ -985,8 +985,8 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.functional.yml
-              - travis_wait 100 docker/sdk up -t -v
-              - travis_wait 100 docker/sdk testing codecept run -c codeception.ci.functional.yml
+              - travis_wait 30 docker/sdk up -t -v
+              - travis_wait 35 docker/sdk testing codecept run -c codeception.ci.functional.yml
 
         - name: Docker / Alpine / PHP 8.0 / MariaDB / Acceptance
           <<: *DOCKER_BUILD_TEMPLATE
@@ -997,9 +997,9 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.acceptance.mariadb.yml
-              - travis_wait 100 docker/sdk up -t
-              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
-              - travis_wait 100 docker/sdk testing codecept run -c codeception.acceptance.yml
+              - travis_wait 35 docker/sdk up -t
+              - travis_wait 35 docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait 35 docker/sdk testing codecept run -c codeception.acceptance.yml
 
         - name: Docker / Alpine / PHP 8.0 / PostgreSQL / Acceptance
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1010,9 +1010,9 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.acceptance.yml
-              - travis_wait 100 docker/sdk up -t
-              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
-              - travis_wait 100 docker/sdk testing codecept run -c codeception.acceptance.yml
+              - travis_wait 35 docker/sdk up -t
+              - travis_wait 35 docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait 35 docker/sdk testing codecept run -c codeception.acceptance.yml
 
         - name: Docker / Alpine / PHP 8.0 / PostgreSQL / Glue
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1023,10 +1023,10 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.api.yml
-              - travis_wait 100 docker/sdk up -t -v
-              - travis_wait 100 docker/sdk testing codecept fixtures
-              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
-              - travis_wait 100 docker/sdk testing codecept run -c codeception.api.yml
+              - travis_wait docker/sdk up -t -v
+              - travis_wait 30 docker/sdk testing codecept fixtures
+              - travis_wait docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait docker/sdk testing codecept run -c codeception.api.yml
 
         - name: Docker / Alpine / PHP 8.0 / MariaDB / Glue
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1037,10 +1037,10 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.api.mariadb.yml
-              - travis_wait 100 docker/sdk up -t -v
-              - travis_wait 100 docker/sdk testing codecept fixtures
-              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
-              - travis_wait 100 docker/sdk testing codecept run -c codeception.api.yml
+              - travis_wait docker/sdk up -t -v
+              - travis_wait 30 docker/sdk testing codecept fixtures
+              - travis_wait docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait docker/sdk testing codecept run -c codeception.api.yml
 
         - name: Docker / Alpine / PHP 8.0 / Frontend & Assets
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1051,7 +1051,7 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.yml
-              - SPRYKER_BUILD_HASH=myhash travis_wait 100 docker/sdk export images
+              - SPRYKER_BUILD_HASH=myhash travis_wait 30 docker/sdk export images
               - docker run -it --rm -e SPRYKER_NGINX_CGI_HOST_YVES_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKOFFICE_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_GATEWAY_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_API_EU=localhost -e SPRYKER_NGINX_CGI_HOST_GLUE_EU=localhost -e SPRYKER_NGINX_CGI_HOST_CONFIGURATOR_EU=localhost -e SPRYKER_NGINX_CGI_HOST_YVES_US=localhost -e SPRYKER_NGINX_CGI_HOST_GLUE_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKOFFICE_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_GATEWAY_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_API_US=localhost -e ALLOWED_IP=127.0.0.1 spryker_demo_frontend:1.0-frontend nginx -t
               - docker run -it --rm --entrypoint='' spryker_demo_frontend:1.0-frontend ls -al /data/public/Yves/assets/myhash
               - docker run -it --rm --entrypoint='' spryker_demo_frontend:1.0-frontend ls -al /data/public/Zed/assets/
@@ -1065,7 +1065,7 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.yml
-              - SPRYKER_BUILD_HASH=myhash travis_wait 100 docker/sdk export images
+              - SPRYKER_BUILD_HASH=myhash travis_wait 30 docker/sdk export images
               - docker run -it --rm -e SPRYKER_NGINX_CGI_HOST_YVES_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKOFFICE_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_GATEWAY_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_API_EU=localhost -e SPRYKER_NGINX_CGI_HOST_GLUE_EU=localhost -e SPRYKER_NGINX_CGI_HOST_CONFIGURATOR_EU=localhost -e SPRYKER_NGINX_CGI_HOST_YVES_US=localhost -e SPRYKER_NGINX_CGI_HOST_GLUE_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKOFFICE_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_GATEWAY_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_API_US=localhost -e ALLOWED_IP=127.0.0.1 spryker_demo_frontend:1.0-frontend nginx -t
               - docker run -it --rm --entrypoint='' spryker_demo_frontend:1.0-frontend ls -al /data/public/Yves/assets/myhash
               - docker run -it --rm --entrypoint='' spryker_demo_frontend:1.0-frontend ls -al /data/public/Zed/assets/
@@ -1080,8 +1080,8 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.functional.mariadb.yml
-              - travis_wait 100 docker/sdk up -t -v
-              - travis_wait 100 docker/sdk testing codecept run -c codeception.ci.functional.yml
+              - travis_wait 30 docker/sdk up -t -v
+              - travis_wait 35 docker/sdk testing codecept run -c codeception.ci.functional.yml
 
         - name: Docker / Alpine / PHP 8.1 / PostgreSQL / Functional Tests
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1092,8 +1092,8 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.functional.yml
-              - travis_wait 100 docker/sdk up -t -v
-              - travis_wait 100 docker/sdk testing codecept run -c codeception.ci.functional.yml
+              - travis_wait 30 docker/sdk up -t -v
+              - travis_wait 35 docker/sdk testing codecept run -c codeception.ci.functional.yml
 
         - name: Docker / Alpine / PHP 8.1 / MariaDB / Acceptance
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1104,9 +1104,9 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.acceptance.mariadb.yml
-              - travis_wait 100 docker/sdk up -t
-              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
-              - travis_wait 100 docker/sdk testing codecept run -c codeception.acceptance.yml
+              - travis_wait 35 docker/sdk up -t
+              - travis_wait 35 docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait 35 docker/sdk testing codecept run -c codeception.acceptance.yml
 
         - name: Docker / Alpine / PHP 8.1 / PostgreSQL / Acceptance
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1117,9 +1117,9 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.acceptance.yml
-              - travis_wait 100 docker/sdk up -t
-              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
-              - travis_wait 100 docker/sdk testing codecept run -c codeception.acceptance.yml
+              - travis_wait 35 docker/sdk up -t
+              - travis_wait 35 docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait 35 docker/sdk testing codecept run -c codeception.acceptance.yml
 
         - name: Docker / Alpine / PHP 8.1 / PostgreSQL / Glue
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1130,10 +1130,10 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.api.yml
-              - travis_wait 100 docker/sdk up -t -v
-              - travis_wait 100 docker/sdk testing codecept fixtures
-              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
-              - travis_wait 100 docker/sdk testing codecept run -c codeception.api.yml
+              - travis_wait docker/sdk up -t -v
+              - travis_wait 30 docker/sdk testing codecept fixtures
+              - travis_wait docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait docker/sdk testing codecept run -c codeception.api.yml
 
         - name: Docker / Alpine / PHP 8.1 / MariaDB / Glue
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1144,10 +1144,10 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.ci.api.mariadb.yml
-              - travis_wait 100 docker/sdk up -t -v
-              - travis_wait 100 docker/sdk testing codecept fixtures
-              - travis_wait 100 docker/sdk testing console queue:worker:start --stop-when-empty
-              - travis_wait 100 docker/sdk testing codecept run -c codeception.api.yml
+              - travis_wait docker/sdk up -t -v
+              - travis_wait 30 docker/sdk testing codecept fixtures
+              - travis_wait docker/sdk testing console queue:worker:start --stop-when-empty
+              - travis_wait docker/sdk testing codecept run -c codeception.api.yml
 
         - name: Docker / Alpine / PHP 8.1 / Frontend & Assets
           <<: *DOCKER_BUILD_TEMPLATE
@@ -1158,7 +1158,7 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.yml
-              - SPRYKER_BUILD_HASH=myhash travis_wait 100 docker/sdk export images
+              - SPRYKER_BUILD_HASH=myhash travis_wait 30 docker/sdk export images
               - docker run -it --rm -e SPRYKER_NGINX_CGI_HOST_YVES_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKOFFICE_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_GATEWAY_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_API_EU=localhost -e SPRYKER_NGINX_CGI_HOST_GLUE_EU=localhost -e SPRYKER_NGINX_CGI_HOST_CONFIGURATOR_EU=localhost -e SPRYKER_NGINX_CGI_HOST_YVES_US=localhost -e SPRYKER_NGINX_CGI_HOST_GLUE_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKOFFICE_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_GATEWAY_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_API_US=localhost -e ALLOWED_IP=127.0.0.1 spryker_demo_frontend:1.0-frontend nginx -t
               - docker run -it --rm --entrypoint='' spryker_demo_frontend:1.0-frontend ls -al /data/public/Yves/assets/myhash
               - docker run -it --rm --entrypoint='' spryker_demo_frontend:1.0-frontend ls -al /data/public/Zed/assets/
@@ -1172,7 +1172,7 @@ jobs:
               - TRAVIS=1
           script:
               - docker/sdk boot -v deploy.yml
-              - SPRYKER_BUILD_HASH=myhash travis_wait 100 docker/sdk export images
+              - SPRYKER_BUILD_HASH=myhash travis_wait 30 docker/sdk export images
               - docker run -it --rm -e SPRYKER_NGINX_CGI_HOST_YVES_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKOFFICE_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_GATEWAY_EU=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_API_EU=localhost -e SPRYKER_NGINX_CGI_HOST_GLUE_EU=localhost -e SPRYKER_NGINX_CGI_HOST_CONFIGURATOR_EU=localhost -e SPRYKER_NGINX_CGI_HOST_YVES_US=localhost -e SPRYKER_NGINX_CGI_HOST_GLUE_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKOFFICE_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_GATEWAY_US=localhost -e SPRYKER_NGINX_CGI_HOST_BACKEND_API_US=localhost -e ALLOWED_IP=127.0.0.1 spryker_demo_frontend:1.0-frontend nginx -t
               - docker run -it --rm --entrypoint='' spryker_demo_frontend:1.0-frontend ls -al /data/public/Yves/assets/myhash
               - docker run -it --rm --entrypoint='' spryker_demo_frontend:1.0-frontend ls -al /data/public/Zed/assets/
