--- a/deploy.valerii-terraform.yml
+++ b/deploy.valerii-terraform.yml
@@ -75,7 +75,7 @@ regions:
                     name: Spryker No-Reply
                     email: no-reply@valerii-terraform.cloud.spryker.toys
             database:
-                database: valerii_prod
+                database: valerii_terraform
                 username: spryker
                 password: secret
 
