--- a/composer.json
+++ b/composer.json
@@ -67,38 +67,38 @@
         "ruflin/elastica": "^6.2.0 || ^7.0.0",
         "seld/signal-handler": "^1.2.0",
         "swiftmailer/swiftmailer": "^6.1.0",
-        "symfony-cmf/routing": "^2.3.3",
+        "symfony-cmf/routing": "^2.3.3 || ^3.0.0",
         "symfony/amazon-sqs-messenger": "^5.1.0 || ^6.0.0",
-        "symfony/config": "^5.0.9",
-        "symfony/console": "^5.3.0",
+        "symfony/config": "^5.0.9 || ^6.0.0",
+        "symfony/console": "^5.3.0 || ^6.0.0",
         "symfony/debug": "^4.4.9",
-        "symfony/error-handler": "^5.0.9",
-        "symfony/event-dispatcher": "^5.1.0",
-        "symfony/filesystem": "^5.1.8",
-        "symfony/finder": "^5.3.0",
-        "symfony/form": "^5.2.0",
-        "symfony/http-client": "^5.0.9",
-        "symfony/http-foundation": "^5.2.0",
-        "symfony/http-kernel": "^5.2.0",
-        "symfony/intl": "^5.0.9",
-        "symfony/mailer": "^5.4.12",
+        "symfony/error-handler": "^5.0.9 || ^6.0.0",
+        "symfony/event-dispatcher": "^5.1.0 || ^6.0.0",
+        "symfony/filesystem": "^5.2.1 || ^6.0.0",
+        "symfony/finder": "^5.3.0 || ^6.0.0",
+        "symfony/form": "^5.2.0 || ^6.0.0",
+        "symfony/http-client": "^5.0.9 || ^6.0.0",
+        "symfony/http-foundation": "^5.2.0 || ^6.0.0",
+        "symfony/http-kernel": "^5.2.1 || ^6.0.0",
+        "symfony/intl": "^5.0.9 || ^6.0.0",
+        "symfony/mailer": "^5.4.12 || ^6.0.0",
         "symfony/messenger": "^5.3.0 || ^6.0.0",
-        "symfony/mime": "^5.0.9",
-        "symfony/options-resolver": "^5.0.9",
-        "symfony/process": "^5.4.0",
-        "symfony/property-access": "^5.4.0",
-        "symfony/routing": "^5.1.0",
+        "symfony/mime": "^5.0.9 || ^6.0.0",
+        "symfony/options-resolver": "^5.0.9 || ^6.0.0",
+        "symfony/process": "^5.4.0 || ^6.0.0",
+        "symfony/property-access": "^5.4.0 || ^6.0.0",
+        "symfony/routing": "^5.1.0 || ^6.0.0",
         "symfony/security-core": "^5.2.8",
         "symfony/security-http": "^5.2.8",
-        "symfony/security-csrf": "^5.0.9",
+        "symfony/security-csrf": "^5.3.0 || ^6.0.0",
         "symfony/security-guard": "^5.2.8",
-        "symfony/serializer": "^5.0.9",
-        "symfony/stopwatch": "^5.0.9",
-        "symfony/translation": "^5.0.9",
-        "symfony/translation-contracts": "^2.1.2",
-        "symfony/twig-bridge": "^5.0.9",
-        "symfony/validator": "^5.2.0",
-        "symfony/yaml": "^5.1.10",
+        "symfony/serializer": "^5.0.9 || ^6.0.0",
+        "symfony/stopwatch": "^5.0.9 || ^6.0.0",
+        "symfony/translation": "^5.0.9 || ^6.0.0",
+        "symfony/translation-contracts": "^2.1.2 || ^3.0.0",
+        "symfony/twig-bridge": "^5.0.9 || ^6.0.0",
+        "symfony/validator": "^5.2.0 || ^6.0.0",
+        "symfony/yaml": "^5.1.10  || ^6.0.0",
         "twig/twig": "^2.15.3 || ^3.4.3",
         "voku/anti-xss": "^4.1.20",
         "webmozart/glob": "^4.0.0",
@@ -145,7 +145,7 @@
         "spryker-sdk/load-testing": "dev-master",
         "spryker-sdk/security-checker": "dev-master",
         "codeception/c3": "^2.6",
-        "spryker-sdk/async-api": "^0.2.3"
+        "spryker-sdk/async-api": "dev-master"
     },
     "autoload": {
         "psr-4": {
