CC-25458 Category Backend API Endpoint (#7509)
CC-25458 Product Category API - Alumio Integration

--- a/tests/PyzTest/Glue/Urls/codeception.yml
+++ b/tests/PyzTest/Glue/Urls/codeception.yml
@@ -28,6 +28,7 @@ suites:
                 - \SprykerTest\Zed\ProductAttribute\Helper\ProductAttributeDataHelper
                 - \SprykerTest\Zed\Category\Helper\CategoryHelper
                 - \SprykerTest\Zed\Category\Helper\CategoryDataHelper
+                - \SprykerTest\Zed\Testify\Helper\Business\DependencyProviderHelper
             config:
                 \SprykerTest\Glue\Testify\Helper\GlueRest:
                     depends: PhpBrowser
