--- a/tests/PyzTest/Glue/Categories/codeception.yml
+++ b/tests/PyzTest/Glue/Categories/codeception.yml
@@ -25,6 +25,7 @@ suites:
                 - \SprykerTest\Glue\Testify\Helper\OpenApi3
                 - \SprykerTest\Glue\Testify\Helper\JsonPath
                 - \SprykerTest\Zed\Category\Helper\CategoryDataHelper
+                - \SprykerTest\Zed\Testify\Helper\Business\DependencyProviderHelper
             config:
                 \SprykerTest\Glue\Testify\Helper\GlueRest:
                     depends: PhpBrowser
