SC-12422 downgraded Docker version from v23 to v20. (#7537)
SC-12422 downgraded Docker version from v23 to v20.

--- a/composer.json
+++ b/composer.json
@@ -106,7 +106,7 @@
         "laminas/laminas-barcode": "^2.9.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5.2",
+        "phpunit/phpunit": "9.5.27",
         "codeception/codeception": "^5.0.2",
         "codeception/lib-innerbrowser": "^3.1.2",
         "spryker/architecture-sniffer": "dev-master",
