--- a/composer.json
+++ b/composer.json
@@ -128,7 +128,7 @@
         "spryker-sdk/spryk": "dev-master as 0.4.6",
         "dms/phpunit-arraysubset-asserts": "^0.4.0",
         "codeception/phpunit-wrapper": "^9.0.0",
-        "codeception/module-rest": "^3.1.0",
+        "codeception/module-rest": "3.3.0",
         "codeception/module-phpbrowser": "^3.0.0",
         "codeception/module-asserts": "^3.0.0",
         "codeception/module-webdriver": "^3.1.1",
