--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "async-aws/sns": "^1.0.0",
         "aws/aws-sdk-php": "^3.247.0",
         "cebe/php-openapi": "^1.6",
-        "doctrine/inflector": "^1.4.2 || ^2.0.0",
+        "doctrine/inflector": "^2.0.0",
         "egulias/email-validator": "^2.1.22 || ^3.1.1",
         "everon/collection": "~1.0.0",
         "everon/criteria-builder": "~1.1.6",
