Fix up dependencies.

--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,9 @@
         "ext-redis": "*",
         "async-aws/core": "^1.10.0",
         "async-aws/sns": "^1.0.0",
+        "async-aws/sqs": "^1.0.0",
         "aws/aws-sdk-php": "^3.247.0",
         "cebe/php-openapi": "^1.6",
-        "doctrine/inflector": "^2.0.0",
         "egulias/email-validator": "^2.1.22 || ^3.1.1",
         "everon/collection": "~1.0.0",
         "everon/criteria-builder": "~1.1.6",
@@ -64,7 +64,7 @@
         "psr/log": "^1.0.1",
         "ramsey/uuid": "^4.0.1",
         "riskio/oauth2-auth0": "^2.4.0",
-        "ruflin/elastica": "^6.2.0 || ^7.0.0",
+        "ruflin/elastica": "^7.0.0",
         "seld/signal-handler": "^1.2.0",
         "swiftmailer/swiftmailer": "^6.1.0",
         "symfony-cmf/routing": "^2.3.3 || ^3.0.0",
@@ -81,7 +81,7 @@
         "symfony/http-foundation": "^5.2.0 || ^6.0.0",
         "symfony/http-kernel": "^5.2.1 || ^6.0.0",
         "symfony/intl": "^5.0.9 || ^6.0.0",
-        "symfony/mailer": "^5.4.12 || ^6.0.0",
+        "symfony/mailer": "^5.4.12",
         "symfony/messenger": "^5.3.0 || ^6.0.0",
         "symfony/mime": "^5.0.9 || ^6.0.0",
         "symfony/options-resolver": "^5.0.9 || ^6.0.0",
