Fix up dependencies.

--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,7 @@
         "psr/log": "^1.0.1",
         "ramsey/uuid": "^4.0.1",
         "riskio/oauth2-auth0": "^2.4.0",
-        "ruflin/elastica": "^7.0.0",
+        "ruflin/elastica": "^6.2.0 || ^7.0.0",
         "seld/signal-handler": "^1.2.0",
         "swiftmailer/swiftmailer": "^6.1.0",
         "symfony-cmf/routing": "^2.3.3 || ^3.0.0",
